ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard
  namespace: soro-develop
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    kubernetes.io/tls-acme: 'true'
    cert-manager.io/cluster-issuer: letsencrypt-prod
    #cert-manager.io/issuer: "letsencrypt-production"

spec:
  tls:
  - hosts:
    - lets-encrypt.soro-lingo.com
    - dome-encrypt.soro-lingo.com
    secretName: soro1-tls
  rules:
  - host: lets-encrypt.soro-lingo.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: kuard
            port:
              number: 80
  - host: dome-encrypt.soro-lingo.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: kuard
            port:
              number: 80
